<resources>
    <string name="app_name">project_1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_id">User Id :</string>
    <string name="enter_user_id">Enter User Id</string>
    <string name="username">Username :</string>
    <string name="enter_username">Enter username</string>
    <string name="phone_no">Phone No :</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="add_user">Add User</string>
    <string name="no_user_found">No user found</string>
    <string name="add">Add</string>
    <string name="user_id_sample">User ID:</string>
    <string name="_123">123</string>
    <string name="username_sample">Username:</string>
    <string name="sample">Sample</string>
    <string name="phoneSample">Phone:</string>
    <string name="_9876543210">9876543210</string>
    <string name="delete_icon_desc" />
</resources>