<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddUserDetailFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtUserId"
            android:text="@string/user_id"
            android:textSize="20sp"
            android:layout_marginTop="37dp"
            android:layout_marginStart="20dp"/>

        <EditText
            android:id="@+id/edtUserId"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_user_id"
            android:layout_marginStart="140dp"
            android:layout_marginTop="25dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtUsername"
        android:text="@string/username"
        android:textSize="20sp"
        android:layout_marginTop="105dp"
        android:layout_marginStart="20dp"/>

    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_username"
        android:layout_marginStart="140dp"
        android:layout_marginTop="95dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtPhone"
        android:text="@string/phone_no"
        android:textSize="20sp"
        android:layout_marginTop="170dp"
        android:layout_marginStart="20dp"/>

    <EditText
        android:id="@+id/edtPhone"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_phone_number"
        android:layout_marginStart="140dp"
        android:layout_marginTop="163dp"/>

    <Button
        android:id="@+id/btnAddUser"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/add_user"
        android:textSize="18sp"
        android:layout_marginTop="250dp"
        android:textAlignment="center"
        android:layout_marginStart="140dp"
        />


</FrameLayout>